# oxidian

./: .gitignore  Cargo.toml  README.md  TODO.md  config.example.toml  pyproject.toml  recipes.lua
core/: config.py  models.py
core/ingest/: chunker.py  parser.py  walker.py
scratch/: ingest.py
src/: config.rs  main.rs
src/ingest/: ingest.rs  mod.rs  walker.rs
tests/: test_config.toml  test_note.md  test_objects.py  test_parser.py  test_walker.py
tests/fixtures/: missing_section.toml  valid_config.toml  wrong_type.toml
